--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,28 @@
-name: Build & Deploy sprong app
+name: Build & Deploy Spring App
 
 on:
   push:
     branches:
-     - main
-
+      - main
+      - master
 
 jobs:
- build-deploy:
-    name: Build and Deploy spring boot for beginners 
-    runs-on: ubuntu-latest    
-    steps: 
-    - name: Checkout code
-      uses: actions/checkout@v3
+  build-deploy:
+    name: Build and Deploy Spring Boot for Beginners
+    runs-on: ubuntu-latest
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'corretto'
-        java-version: '17'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: '17'
 
-    - name: Unit Tests
-      run: mvn -B test --file pom.xml
+      - name: Run unit tests
+        run: mvn -B test --file pom.xml
 
-    - name: Build the application
-      run: |
-       mvn clean
-       mvn -B package --file pom.xml
+      - name: Build the application
+        run: mvn -B clean package --file pom.xml
