--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,29 @@ jobs:
         run: mvn -B test --file pom.xml
 
       - name: Build the application
-        run: mvn -B clean package --file pom.xml
+        run: |
+         mvn clean
+         mvn -B package --file pom.xml
+
+
+      - name: Build Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile
+          push: false
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-boot-for-beginners:$(date-'%Y-%m-%d%H-%M-%S')
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+
+      - name: Push Docker Image to Docker Hub
+        uses: docker/build-push-action@v5       
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-boot-for-beginners:$(date-'%Y-%m-%d%H-%M-%S')
