--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           context: .
           file: Dockerfile
           push: false
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-boot-for-beginners:$(date-'%Y%m%d%H%M%S')
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-boot-for-beginners:latest
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -50,4 +50,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-boot-for-beginners:$(date-'%Y%m%d%H%M%S')
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-boot-for-beginners:latest
